--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
 
 </head>
 <body>
-    <div class="flex gap-1">
-    <a href="#" class="social" aria-label="tiktok"></a>
-    <a href="#" class="social" aria-label="instagram"></a>
-    <a href="#" class="social" aria-label="twitter"></a>
-    <a href="#" class="social" aria-label="discord"></a>
+   <header>
+    <div class="container py-base">
+        <nav class="flex items-center gap-1.5">
+            <a href="#">
+                <img src="assets/icons/logo.svg" alt="logo zingen">
+            </a>
+
+            <a href="#about" class="desktop-only">Conheça o app</a>
+            <a href="#features" class="desktop-only">Funcionalidades</a>
+            <a href="#princing" class="desktop-only">Plano e preços</a>
+
+            <a href="download" class="btn btn-sm">Baixar agora</a>
+        </nav>
     </div>
+   </header>
 </body>
 </html>
