--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <h2>Assine e tenha acesso ilimitado a todas as funcionalidades</h2>
         </header>
 
-        <div class="cards evem-columns items-center">
+        <div class="cards even-columns items-center">
             <div class="card py-lg px-lg">
                 <h3>Básico</h3>
                 <p>Baixe o app e comece a cantar agora mesmo!</p>
@@ -129,6 +129,7 @@
                     <li>Cante apenas as músicas disponíveis no plano gratuito</li>
                 </ul>
             </div>
+            
 
             <div class="premium">
                 <div class="card py-lg px-lg">
@@ -164,5 +165,30 @@
     </div>
    </section>
 
+   <section id="download">
+    <div class="container py-xl">
+        <div class="card px-lg even-columns items-center">
+        <div>
+            <header>
+                <strong>download</strong>
+                <h2>Bora cantar</h2>
+            </header>
+            <p>
+                Desperte seu potencial de estrela, liberte sua voz e faça parte da comunidade musical mais envolvente. Baixe o Zingen agora e transforme suas performances em experiências inesquecíveis!
+            </p>
+
+            <div class="buttons flex gap-1">
+                <a href="#">
+                    <img src="assets/button-appstore.svg" alt="baixar da app apple store">
+                </a>
+                <a href="#">
+                    <img src="assets/button-playstore.svg" alt="baixar da play store">
+                </a>
+            </div>
+        </div>
+            <img src="assets/rapaz-ouvindo-musica-com-fones-de-ouvido-e-cantando-no-aplicativo-de-karaoke-removebg 1.png" alt="">
+        </div>
+        </div>
+   </section>
 </body>
 </html>
