--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
             <a href="#about" class="desktop-only">Conheça o app</a>
             <a href="#features" class="desktop-only">Funcionalidades</a>
-            <a href="#princing" class="desktop-only">Plano e preços</a>
-
-            <a href="download" class="btn btn-sm">Baixar agora</a>
+            <a href="#pricing" class="desktop-only">Plano e preços</a>
+            <a href="#download" class="btn btn-sm">Baixar agora</a>
         </nav>
     </div>
    </header>
@@ -190,5 +189,58 @@
         </div>
         </div>
    </section>
+
+   <footer>
+    <div class="container py-xl grid">
+            <section class="grid top">
+            <img src="assets/icons/logo.svg" alt="">
+            
+            <nav class="even-columns">
+                <ul role="list" class="grid gap-1.5">
+                    <li class="tittle">Produto</li>
+                    <li>
+                        <a href="#features">funcionalidades</a>
+                    </li>
+                    <li>
+                        <a href="#pricing">planos e preços</a>
+                    </li>
+                    <li>
+                        <a href="#download">download</a>
+                    </li>
+                </ul>
+                <ul role="list" class="grid gap-1.5">
+                    <li class="tittle">Empresa</li>
+                    <li>
+                        <a href="#about">sobre nos</a>
+                    </li>
+                    <li>
+                        <a href="#">trabalhe conosco</a>
+                    </li>
+                    <li>
+                        <a href="#">blog</a>
+                    </li>
+                </ul>
+                <ul role="list" class="grid gap-1.5">
+                    <li class="tittle">legal</li>
+                    <li>
+                        <a href="#">termos de uso</a>
+                    </li>
+                    <li>
+                        <a href="#">Política de privacidade</a>
+                    </li>
+                </ul>
+            </nav>
+            </section>
+            <section class="bottom flex gap-1.5">
+                <div class="flex gap-1.5">
+                    <a href="#" class="social" aria-label="tiktok"></a>
+                    <a href="#" class="social" aria-label="instagram"></a>
+                    <a href="#" class="social" aria-label="twitter"></a>
+                    <a href="#" class="social" aria-label="discord"></a>
+                </div>
+                <span class="copy">©2024 Zingen Technologies, Inc.</span>
+            </section>
+    </div>
+   </footer>
 </body>
 </html>
